# transactional-outbox

./: Cargo.toml  README.md
config/: default.yaml
local_deployment/: docker-compose.yml
migrations/: V1__init.sql
src/: lib.rs  main.rs
src/config/: app_config.rs
src/controller/: delivery_controller.rs  dto.rs  mod.rs
src/kafka/: topics.rs
src/model/: dto.rs  entity.rs
src/postgres/: connection.rs  migration.rs  mod.rs
src/postgres/model/: entity.rs  mod.rs  result.rs
src/postgres/repository/: delivery.rs  delivery_repository.rs  mapper.rs  mod.rs  outbox.rs  outbox_repository.rs
src/service/: delivery.rs  delivery_service.rs  mapper.rs  mod.rs
tests/: repository_it.rs
