[package]
name = "transactional-outbox"
version = "0.1.0"
edition = "2024"

[lib]
name = "transactional_outbox"
path = "src/lib.rs"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
refinery = { version = "0.8", features = ["tokio-postgres"] }
config = "0.15.17"
chrono = "0.4.42"
anyhow = "1.0.100"
uuid = { version = "1.18.1", features = ["v4"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0.16"
testcontainers = { version = "^0.25.0", features = ["default"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
prometheus = "0.14.0"
